# 3D-environment-generation

./: .gitignore  README.md  pyproject.toml
environment_generation/: __init__.py  artifacts.py  behavior_evidence.py  behavior_guidance.py  behavior_preflight.py  behavior_runner.py  behavior_trial.py  builder.py  catalog.py  codex_models.py  courtyard.py  doctor.py  env_behavior_trials.py  env_tasks.py  env_verification.py  env_visual_review.py  episode_runtime.py  launcher.py  mcp_server.py  mujoco_compile.py  operations.py  play_session.py  player.py  preview.py  ramp_geometry.py  runtime_config.py  scene_geometry.py  schema.py  session.py  studio_server.py  studio_view_context.py  styled_observation.py  task_agent.py  task_compiler.py  task_compiler_output_schema.json  task_oracle.py  task_runner.py  trajectory_assertions.py  visual_review_output_schema.json  visual_scene.py
tests/: test_behavior_evidence.py  test_behavior_guidance.py  test_behavior_milestone_view.py  test_behavior_preflight.py  test_behavior_runner.py  test_behavior_trial.py  test_behavior_trial_view.py  test_branding.py  test_builder.py  test_codex_models.py  test_courtyard.py  test_doctor.py  test_env_behavior_trials.py  test_env_tasks.py  test_env_verification.py  test_env_visual_review.py  test_episode_runtime.py  test_launcher.py  test_mcp_server.py  test_mujoco_compile.py  test_play_session.py  test_player.py  test_preview.py  test_ramp_geometry.py  test_runtime_config.py  test_scene_geometry.py  test_studio_responsive_layout.py  test_studio_server.py  test_studio_view_context.py  (+9 more)
(+18 files in other folders)
