[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "environment-generation"
version = "0.1.0"
description = "A Codex-operated harness for generating reconstructable 3D MuJoCo environments"
requires-python = ">=3.10,<3.14"
dependencies = [
  "mujoco>=3.2,<4.0",
  "numpy>=1.26,<3.0",
  "pillow>=10.0,<12.0",
  "playwright>=1.58,<1.59",
  "pydantic>=2.7,<3.0",
  "tomli>=2.0,<3.0; python_version<'3.11'",
]

[project.optional-dependencies]
test = ["pytest>=8.0,<9.0"]

[project.scripts]
environment-generation = "environment_generation.launcher:main"
environment-generation-mcp = "environment_generation.mcp_server:main"
environment-generation-studio = "environment_generation.studio_server:main"
environment-generation-doctor = "environment_generation.doctor:main"

[tool.setuptools.packages.find]
include = ["environment_generation*"]

[tool.setuptools.package-data]
environment_generation = [
  "visual_review_output_schema.json",
  "task_compiler_output_schema.json",
  "studio_web/*",
  "studio_web/vendor/*",
  "studio_web/assets/courtyard/*",
  "studio_web/assets/courtyard/kenney_platformer/*",
  "studio_web/assets/courtyard/kenney_platformer/Textures/*",
  "studio_web/assets/courtyard/kenney_nature/*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
